--- a/animation.css
+++ b/animation.css
@@ -8,6 +8,20 @@ html, body {
     padding: 0;
     font-family: Helvetica, Arial, sans-serif;
 }
+footer{
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+}
+
+.footer {
+  height: 100px;
+  margin: auto;
+  width: 400px;
+  font-size:16;
+  text-align:center;
+  padding:10px;
+}
 
 #splash {
   background: #cc1f2f;
